--- a/src/maths/CMakeLists.txt
+++ b/src/maths/CMakeLists.txt
@@ -1,6 +1,4 @@
-# set(PRIVATE_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/private")
-
-add_library(maths tuple4.cxx vector4.cxx point4.cxx) # ${PRIVATE_HEADERS}
+add_library(maths tuple4.cxx vector4.cxx point4.cxx)
 
 target_include_directories(maths PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/private")
 target_include_directories(maths PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
