Add tests for canvas, colour and point

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,11 +5,10 @@ macro(package_add_test TESTNAME)
     add_executable(${TESTNAME} ${ARGN})
     # add include paths
     target_include_directories(${TESTNAME} PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
+    target_include_directories(${TESTNAME} PUBLIC "${CMAKE_SOURCE_DIR}/src/renderer")
     # link the Google test infrastructure, mocking library, and a default main fuction to
     # the test executable.  Remove g_test_main if writing your own main function.
-    target_link_libraries(${TESTNAME} gtest gmock gtest_main maths)
-    # gtest_discover_tests replaces gtest_add_tests,
-    # see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
+    target_link_libraries(${TESTNAME} gtest gmock gtest_main maths renderer)
     gtest_discover_tests(${TESTNAME}
         # set a working directory so your project root so that you can find test data via paths relative to the project root
         WORKING_DIRECTORY ${PROJECT_DIR}
@@ -19,3 +18,6 @@ macro(package_add_test TESTNAME)
 endmacro()
 
 package_add_test(test_vector4 test_vector4.cxx)
+package_add_test(test_point4 test_point4.cxx)
+package_add_test(test_colour test_colour.cxx)
+package_add_test(test_canvas test_canvas.cxx)
