Add ppm writer and tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,9 +6,10 @@ macro(package_add_test TESTNAME)
     # add include paths
     target_include_directories(${TESTNAME} PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
     target_include_directories(${TESTNAME} PUBLIC "${CMAKE_SOURCE_DIR}/src/renderer")
+    target_include_directories(${TESTNAME} PUBLIC "${CMAKE_SOURCE_DIR}/src/imageWriters")
     # link the Google test infrastructure, mocking library, and a default main fuction to
     # the test executable.  Remove g_test_main if writing your own main function.
-    target_link_libraries(${TESTNAME} gtest gmock gtest_main maths renderer)
+    target_link_libraries(${TESTNAME} gtest gmock gtest_main maths renderer imageWriters)
     gtest_discover_tests(${TESTNAME}
         # set a working directory so your project root so that you can find test data via paths relative to the project root
         WORKING_DIRECTORY ${PROJECT_DIR}
@@ -21,3 +22,4 @@ package_add_test(test_vector4 test_vector4.cxx)
 package_add_test(test_point4 test_point4.cxx)
 package_add_test(test_colour test_colour.cxx)
 package_add_test(test_canvas test_canvas.cxx)
+package_add_test(test_ppmWriter test_ppmWriter.cxx)
