Add initial Matrix impl. TODO: Inverse

--- a/src/maths/CMakeLists.txt
+++ b/src/maths/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(maths tuple4.cxx vector4.cxx point4.cxx colour.cxx)
+add_library(maths tuple4.cxx vector4.cxx point4.cxx colour.cxx matrix4x4.cxx)
 
 target_include_directories(maths PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/private")
 target_include_directories(maths PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
