--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,3 +23,4 @@ package_add_test(test_point4 test_point4.cxx)
 package_add_test(test_colour test_colour.cxx)
 package_add_test(test_canvas test_canvas.cxx)
 package_add_test(test_ppmWriter test_ppmWriter.cxx)
+package_add_test(test_matrix test_matrix.cxx)
