--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 
+# for using MSVC runtime library flags
+cmake_policy(SET CMP0091 NEW)
+
+# forces a statically-linked runtime library
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
 # set the project name
 project(RayTracer VERSION 0.1)
 
