--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,8 @@ package_add_test(test_colour test_colour.cxx maths)
 package_add_test(test_matrix test_matrix.cxx maths)
 package_add_test(test_transform test_transform.cxx maths)
 package_add_test(test_ray test_ray.cxx maths objects)
-package_add_test(test_sphere test_sphere.cxx maths objects)
+package_add_test(test_sphere test_sphere.cxx maths objects materials)
 package_add_test(test_canvas test_canvas.cxx maths renderer)
 package_add_test(test_ppmWriter test_ppmWriter.cxx maths renderer imageWriters)
+package_add_test(test_light test_light.cxx maths objects materials)
+package_add_test(test_material test_material.cxx maths materials)
