--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(renderer canvas.cxx)
+add_library(renderer canvas.cxx shader.cxx)
 
 target_include_directories(renderer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
+target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/lights")
+target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/materials")
