--- a/src/objects/CMakeLists.txt
+++ b/src/objects/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(objects ray.cxx sphere.cxx pointLight.cxx)
+add_library(objects ray.cxx sphere.cxx)
 
 target_include_directories(objects PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(objects PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
