--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,5 +28,6 @@ package_add_test(test_ray test_ray.cxx maths objects)
 package_add_test(test_sphere test_sphere.cxx maths objects materials)
 package_add_test(test_canvas test_canvas.cxx maths renderer)
 package_add_test(test_ppmWriter test_ppmWriter.cxx maths renderer imageWriters)
-package_add_test(test_light test_light.cxx maths objects materials)
+package_add_test(test_light test_light.cxx maths lights objects materials)
 package_add_test(test_material test_material.cxx maths materials)
+package_add_test(test_shader test_shader.cxx maths materials renderer lights)
