GLOB source files

--- a/src/lights/CMakeLists.txt
+++ b/src/lights/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(lights pointLight.cxx)
+file(GLOB LIGHTS_SOURCE_FILES *.cxx)
+add_library(lights ${LIGHTS_SOURCE_FILES})
 
 target_include_directories(lights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(lights PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
