--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(renderer canvas.cxx shader.cxx)
+file(GLOB RENDERER_SOURCE_FILES *.cxx)
+add_library(renderer ${RENDERER_SOURCE_FILES})
 
 target_include_directories(renderer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
