Create a world and add some precomputation structure

--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -5,3 +5,4 @@ target_include_directories(renderer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/maths")
 target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/lights")
 target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/materials")
+target_include_directories(renderer PUBLIC "${CMAKE_SOURCE_DIR}/src/objects")
