--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,3 +31,4 @@ package_add_test(test_ppmWriter test_ppmWriter.cxx maths renderer imageWriters)
 package_add_test(test_light test_light.cxx maths lights objects materials)
 package_add_test(test_material test_material.cxx maths materials)
 package_add_test(test_shader test_shader.cxx maths materials renderer lights)
+package_add_test(test_world test_world.cxx maths materials renderer lights objects)
